re PR middle-end/26717 (complex/complex gives a REAL_CST)

PR middle-end/26717
	* fold-const.c (fold_binary) [RDIV_EXPR]: Do not optimize A / A
	to 1.0 for non-real operands. Implement A / A optimization for
	complex operands.


Co-Authored-By: Roger Sayle <roger@eyesopen.com>

From-SVN: r112379