gcc/testsuite/gcc.dg/pr26717.c
@@ -1,0 +1,7 @@
+/* { dg-do compile } */
+/* { dg-options "-O -ffast-math" } */
+_Complex float f (_Complex float a)
+{
+  _Complex float b = a / a;
+  return b;
+}
